--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -1,16 +1,8 @@
-version: "3"
+# Full image (all CLI tools installed):
+#   $ docker compose -f docker-compose.yml -f docker-compose-full.yml up
 
 services:
   spiderfoot:
     build:
       context: ./
-      dockerfile: ./Dockerfile.full
-    volumes:
-      - spiderfoot-data:/var/lib/spiderfoot
-    container_name: spiderfoot
-    ports:
-      - "5002:5001"
-    restart: unless-stopped
-
-volumes:
-  spiderfoot-data:
+      dockerfile: ./Dockerfile.full 
