--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -16,38 +16,38 @@ RUN mkdir /tools || true
 WORKDIR /tools
 
 # Install Golang tools
-RUN apt-get -y update && apt-get -y install golang npm
+RUN apt-get update && apt-get install -y golang \
+    && mkdir -p /go/src /go/bin
 ENV GOPATH="/go"
 ENV PATH="$GOPATH/bin:$PATH"
-RUN mkdir -p "$GOPATH/src" "$GOPATH/bin"
 
-# Install Ruby tools for WhatWeb
-RUN apt-get -y update && apt-get -y install ruby ruby-dev bundler
 # Install WhatWeb
-RUN git clone https://github.com/urbanadventurer/WhatWeb \
-    && gem install rchardet mongo json && cd /tools/WhatWeb \
-    && bundle install && cd /tools
+RUN apt-get update && apt-get install -y ruby ruby-dev bundler \
+    && git clone https://github.com/urbanadventurer/WhatWeb /tools/WhatWeb \
+    && gem install rchardet mongo json \
+    && cd /tools/WhatWeb && bundle install \
+    && cd /tools
 
+# Add SpiderFoot user/group
 RUN groupadd spiderfoot \
     && useradd -m -g spiderfoot -d /home/spiderfoot -s /sbin/nologin \
     -c "SpiderFoot User" spiderfoot
 
 # Install RetireJS
-RUN apt remove -y cmdtest \
-    && apt remove -y yarn \
-    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-    && echo 'deb https://dl.yarnpkg.com/debian/ stable main' |tee /etc/apt/sources.list.d/yarn.list \
+RUN apt-get remove -y cmdtest yarn \
+    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor -o /usr/share/keyrings/yarnkey.gpg \
+    && echo "deb [signed-by=/usr/share/keyrings/yarnkey.gpg] https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list \
     && apt-get update \
-    && apt-get install yarn -y \
+    && apt-get install -y yarn \
     && yarn install \
     && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
-    && apt-get install -y nodejs npm \
+    && apt-get install -y --no-install-recommends nodejs \
     && npm install -g retire
 
-# Install Google Chrome the New Way (Not via apt-key)
+# Install Google Chrome the New Way
 RUN wget -qO - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
-    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | tee /etc/apt/sources.list.d/google-chrome.list \
-    && apt -y update && apt install --allow-unauthenticated -y google-chrome-stable
+    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
+    && apt-get update && apt-get install -y google-chrome-stable
 
 # Install Wappalyzer
 RUN git clone https://github.com/Lissy93/wapalyzer \
@@ -66,10 +66,14 @@ RUN git clone https://github.com/drwetter/testssl.sh.git
 # Install Snallygaster and TruffleHog
 RUN pip3 install snallygaster trufflehog
 
+# Cleanup APT for a smaller image
+RUN apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 # Place database and logs outside installation directory
-ENV SPIDERFOOT_DATA /var/lib/spiderfoot
-ENV SPIDERFOOT_LOGS /var/lib/spiderfoot/log
-ENV SPIDERFOOT_CACHE /var/lib/spiderfoot/cache
+ENV SPIDERFOOT_DATA=/var/lib/spiderfoot
+ENV SPIDERFOOT_LOGS=/var/lib/spiderfoot/log
+ENV SPIDERFOOT_CACHE=/var/lib/spiderfoot/cache
 
 RUN mkdir -p $SPIDERFOOT_DATA || true \
     && mkdir -p $SPIDERFOOT_LOGS || true \
