--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -45,9 +45,12 @@ RUN apt-get remove -y cmdtest yarn \
     && npm install -g retire
 
 # Install Google Chrome the New Way
-RUN wget -qO - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
-    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
-    && apt-get update && apt-get install -y google-chrome-stable
+#RUN wget -qO - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
+#    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
+#    && apt-get update && apt-get install -y google-chrome-stable
+
+# Install Chromium (arm64 support)
+RUN apt-get install -y chromium
 
 # Install Wappalyzer
 RUN git clone https://github.com/Lissy93/wapalyzer \
@@ -55,8 +58,8 @@ RUN git clone https://github.com/Lissy93/wapalyzer \
     && yarn install && yarn run lint
 
 # Install Nuclei
-RUN wget https://github.com/projectdiscovery/nuclei/releases/download/v2.6.5/nuclei_2.6.5_linux_amd64.zip \
-    && unzip nuclei_2.6.5_linux_amd64.zip \
+RUN wget https://github.com/projectdiscovery/nuclei/releases/download/v3.3.9/nuclei_3.3.9_linux_arm64.zip \
+    && unzip nuclei_3.3.9_linux_arm64.zip \
     && git clone https://github.com/projectdiscovery/nuclei-templates.git
 
 # Install testssl.sh
@@ -82,9 +85,11 @@ RUN mkdir -p $SPIDERFOOT_DATA || true \
     && chown spiderfoot:spiderfoot $SPIDERFOOT_LOGS \
     && chown spiderfoot:spiderfoot $SPIDERFOOT_CACHE
 
+# Get code from repo
+RUN git clone https://github.com/Retloldin/spiderfoot /tmp/git_clone \
+    && cp -r /tmp/git_clone/* /home/spiderfoot/ \
+    && rm -rf /tmp/git_clone 
 WORKDIR /home/spiderfoot
-COPY . .
-
 
 ENV VIRTUAL_ENV=/opt/venv
 RUN mkdir -p "$VIRTUAL_ENV" || true
@@ -92,7 +97,6 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 RUN python -m venv "$VIRTUAL_ENV"
 
 ARG REQUIREMENTS=requirements.txt
-COPY "$REQUIREMENTS" requirements.txt
 
 RUN chown -R spiderfoot:spiderfoot /tools
 RUN chown -R spiderfoot:spiderfoot "$VIRTUAL_ENV"
